--- a/App_GlobalResources/Common.es-ar.resx
+++ b/App_GlobalResources/Common.es-ar.resx
@@ -118,27 +118,27 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AdditionalAttachment" xml:space="preserve">
-    <value>Altri Allegati</value>
+    <value>Adjunto adicional</value>
     <comment>wording to ask for another attachment</comment>
   </data>
   <data name="Admin" xml:space="preserve">
-    <value>Amministrazione</value>
+    <value>Administración</value>
     <comment>main menu</comment>
   </data>
   <data name="Any" xml:space="preserve">
-    <value>Any</value>
+    <value>Cualquiera</value>
     <comment>Any</comment>
   </data>
   <data name="AssignedTo" xml:space="preserve">
-    <value>Assegnato a</value>
+    <value>Asignado a</value>
     <comment>for use in table displays</comment>
   </data>
   <data name="Attachments" xml:space="preserve">
-    <value>Allegati</value>
+    <value>Adjuntos</value>
     <comment>word used to describe attachments</comment>
   </data>
   <data name="BackToTop" xml:space="preserve">
-    <value>Torna indietro</value>
+    <value>Ir al principio</value>
     <comment>return to top of page</comment>
   </data>
   <data name="Bytes" xml:space="preserve">
@@ -146,167 +146,167 @@
     <comment>bytes</comment>
   </data>
   <data name="Cancel" xml:space="preserve">
-    <value>Cancella</value>
+    <value>Cancelar</value>
     <comment>Cancel</comment>
   </data>
   <data name="Closed" xml:space="preserve">
-    <value>Chiudi</value>
+    <value>Cerrado</value>
     <comment>make sure this lines up with row 5 in the status table</comment>
   </data>
   <data name="Contact" xml:space="preserve">
-    <value>Contatto</value>
+    <value>Contacto</value>
     <comment>main menu</comment>
   </data>
   <data name="Dashboard" xml:space="preserve">
-    <value>Dashboard</value>
+    <value>Portal de entrada</value>
     <comment>main menu</comment>
   </data>
   <data name="Delete" xml:space="preserve">
-    <value>Cancella</value>
+    <value>Borrar</value>
     <comment>Delete</comment>
   </data>
   <data name="Deleted" xml:space="preserve">
-    <value>Cancellato</value>
+    <value>Borrado</value>
     <comment>Deleted</comment>
   </data>
   <data name="Edit" xml:space="preserve">
-    <value>Edita</value>
+    <value>Editar</value>
     <comment>Edit</comment>
   </data>
   <data name="EmailError" xml:space="preserve">
-    <value>Errore invio email</value>
+    <value>Error enviando email</value>
   </data>
   <data name="Error" xml:space="preserve">
-    <value>Errore</value>
+    <value>Error</value>
     <comment>Error</comment>
   </data>
   <data name="Group" xml:space="preserve">
-    <value>Gruppo</value>
+    <value>Grupo</value>
     <comment>word used for each 'group'</comment>
   </data>
   <data name="Groups" xml:space="preserve">
-    <value>Gruppi</value>
+    <value>Grupos</value>
     <comment>admin menu</comment>
   </data>
   <data name="Help" xml:space="preserve">
-    <value>Help/FAQ</value>
+    <value>Ayuda/FAQ</value>
     <comment>main menu</comment>
   </data>
   <data name="Information" xml:space="preserve">
-    <value>Informazioni</value>
+    <value>Información</value>
     <comment>admin menu</comment>
   </data>
   <data name="InvalidEmail" xml:space="preserve">
-    <value>Indirizzo Email non valido</value>
+    <value>Email inválido</value>
     <comment>Invalid Email Error</comment>
   </data>
   <data name="LastAction" xml:space="preserve">
-    <value>Ultima Azione</value>
+    <value>Acción reciente</value>
     <comment>for use in table displays</comment>
   </data>
   <data name="MyIssues" xml:space="preserve">
-    <value>My Issues</value>
+    <value>Mis Tickets</value>
     <comment>main menu</comment>
   </data>
   <data name="NewTicket" xml:space="preserve">
-    <value>Nuovo Ticket</value>
+    <value>Nuevo Ticket</value>
     <comment>main menu</comment>
   </data>
   <data name="NoAccess" xml:space="preserve">
-    <value>No Accesso</value>
+    <value>Sin Acceso</value>
     <comment>No Access</comment>
   </data>
   <data name="NoGroups" xml:space="preserve">
-    <value>Nessun Gruppo a disposizione</value>
+    <value>No hay grupos disponibles para Usted</value>
   </data>
   <data name="NoGroupsExplanation" xml:space="preserve">
-    <value>Non vi sono gruppi con un basso livello di accesso abbastanza</value>
+    <value>No hay grupos con un nivel de acceso suficientemente bajo al que Usted se pueda unir, por favor</value>
   </data>
   <data name="OriginatingGroup" xml:space="preserve">
-    <value>Originari del Gruppo</value>
+    <value>Originando GRupos</value>
     <comment>for use in table displays</comment>
   </data>
   <data name="Permissions" xml:space="preserve">
-    <value>Permessi</value>
+    <value>Permisos</value>
     <comment>admin menu</comment>
   </data>
   <data name="Priority" xml:space="preserve">
-    <value>Prioprità</value>
+    <value>Prioridad</value>
     <comment>word use for 'priority'</comment>
   </data>
   <data name="Profile" xml:space="preserve">
-    <value>Profilo</value>
+    <value>Perfil</value>
     <comment>main menu</comment>
   </data>
   <data name="Required" xml:space="preserve">
-    <value>Richiesto</value>
+    <value>Requerido</value>
     <comment>Required</comment>
   </data>
   <data name="Resolved" xml:space="preserve">
-    <value>Risolto</value>
+    <value>Resuelto</value>
     <comment>make sure this lines up with row 4 in the status table</comment>
   </data>
   <data name="Saved" xml:space="preserve">
-    <value>Salvato</value>
+    <value>Guardado</value>
     <comment>Saved</comment>
   </data>
   <data name="Search" xml:space="preserve">
-    <value>Cerca</value>
+    <value>Buscar</value>
     <comment>main menu</comment>
   </data>
   <data name="Settings" xml:space="preserve">
-    <value>Settings</value>
+    <value>Configuraciones</value>
     <comment>admin menu</comment>
   </data>
   <data name="Statistics" xml:space="preserve">
-    <value>Statistiche</value>
+    <value>Estadísticas</value>
     <comment>admin menu</comment>
   </data>
   <data name="Status" xml:space="preserve">
-    <value>Stato</value>
+    <value>Estado</value>
     <comment>word used for 'status'</comment>
   </data>
+  <data name="String1" xml:space="preserve">
+    <value>Victor Martinez (VMartinez@ribeiro.com.ar)</value>
+    <comment>Who Translated this language</comment>
+  </data>
   <data name="Subgroup" xml:space="preserve">
-    <value>Sub-Gruppo</value>
+    <value>Sub-Grupo</value>
     <comment>word used for 'sub-groups'</comment>
   </data>
   <data name="Subgroups" xml:space="preserve">
-    <value>Sub-Gruppi</value>
+    <value>Sub-Grupos</value>
     <comment>plural for Subgroup</comment>
   </data>
   <data name="Submitter" xml:space="preserve">
-    <value>Inserisci</value>
+    <value>Solicitante</value>
     <comment>for use in table displays</comment>
   </data>
   <data name="Ticket" xml:space="preserve">
     <value>Ticket</value>
   </data>
   <data name="TicketNumber" xml:space="preserve">
-    <value>Numero Ticket</value>
+    <value>Número de Ticket</value>
     <comment>for use in table displays</comment>
   </data>
-  <data name="Translator" xml:space="preserve">
-    <value>Panatronic from the Slick-Ticket Discussion boards</value>
-    <comment>Who Translated this language</comment>
-  </data>
   <data name="Undefined" xml:space="preserve">
-    <value>Indefinito</value>
+    <value>Indefinido</value>
     <comment>Undefined</comment>
   </data>
   <data name="Update" xml:space="preserve">
-    <value>Aggiorna</value>
+    <value>Actualizar</value>
     <comment>Update</comment>
   </data>
   <data name="Updated" xml:space="preserve">
-    <value>Aggiornato</value>
+    <value>Actualizado</value>
     <comment>Updated</comment>
   </data>
   <data name="Users" xml:space="preserve">
-    <value>Utenti</value>
+    <value>Usuarios</value>
     <comment>admin menu</comment>
   </data>
   <data name="ViewTicket" xml:space="preserve">
-    <value>Visualizza Ticket</value>
+    <value>Ver Ticket</value>
     <comment>main menu</comment>
   </data>
 </root>
