--- a/App_GlobalResources/Common.resx
+++ b/App_GlobalResources/Common.resx
@@ -285,6 +285,10 @@
     <value>Ticket Number</value>
     <comment>for use in table displays</comment>
   </data>
+  <data name="Translator" xml:space="preserve">
+    <value>Stan Naspinski (stan@naspinski.net)</value>
+    <comment>Who Translated this language</comment>
+  </data>
   <data name="Undefined" xml:space="preserve">
     <value>undefined</value>
     <comment>Undefined</comment>
