--- a/admin/App_LocalResources/es/permissions.aspx.es.resx
+++ b/admin/App_LocalResources/es/permissions.aspx.es.resx
@@ -117,59 +117,63 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="btnSubmitResource1.Text" xml:space="preserve">
-    <value>Inoltra</value>
+  <data name="btnAddGroupResource1.Text" xml:space="preserve">
+    <value>Agregar Grupo</value>
   </data>
-  <data name="litAssignToResource1.Text" xml:space="preserve">
-    <value>Assegnato a</value>
+  <data name="btnCancelResource1.Text" xml:space="preserve">
+    <value>Cancelar</value>
   </data>
-  <data name="litDetailsResource1.Text" xml:space="preserve">
-    <value>Dettagli</value>
+  <data name="btnNewSubmitResource1.Text" xml:space="preserve">
+    <value>Guardar Grupo</value>
   </data>
-  <data name="litItWillBeAccessResource1.Text" xml:space="preserve">
-    <value>sarà accessibile attraverso</value>
+  <data name="btnResetADxmlResource1.Text" xml:space="preserve">
+    <value>Actualizar AD</value>
   </data>
-  <data name="litMoreAttachmentsResource1.Text" xml:space="preserve">
-    <value>È possibile aggiungere altri allegati, dopo che il Ticket è stato inserito</value>
+  <data name="gvADGroupsResource1.EmptyDataText" xml:space="preserve">
+    <value>Ninguno tiene acceso!</value>
   </data>
-  <data name="litTicketSubmittedResource1.Text" xml:space="preserve">
-    <value>Il ticket è stato inserito con successo;</value>
+  <data name="lbUpdateResource1.Text" xml:space="preserve">
+    <value>Actualizar</value>
   </data>
-  <data name="litTopicResource1.Text" xml:space="preserve">
-    <value>Topic</value>
+  <data name="LinkButton1Resource1.Text" xml:space="preserve">
+    <value>Editar</value>
   </data>
-  <data name="litYourTicketNumberIsResource1.Text" xml:space="preserve">
-    <value>Il numero Ticket è</value>
+  <data name="LinkButton2Resource1.Text" xml:space="preserve">
+    <value>Remover</value>
   </data>
-  <data name="rfvSubUnitResource1.ErrorMessage" xml:space="preserve">
-    <value>è necessario selezionare un Sub-Gruppo</value>
+  <data name="litAccessLevelResource1.Text" xml:space="preserve">
+    <value>Nivel de Acceso</value>
   </data>
-  <data name="rfvTopicResource1.ErrorMessage" xml:space="preserve">
-    <value>Campi Obbligatori</value>
+  <data name="litADGroupResource1.Text" xml:space="preserve">
+    <value>Grupo de AD</value>
   </data>
-  <data name="rfvUnitResource1.ErrorMessage" xml:space="preserve">
-    <value>è necessario selezionare un Gruppo</value>
+  <data name="litDescriptionResource1.Text" xml:space="preserve">
+    <value>Aquí Usted puede configurar qué niveles de acceso tendrán sus grupos de AD para escribir permisos; los niveles más altos tiene precedencia.</value>
   </data>
-  <data name="ANew" xml:space="preserve">
-    <value>A new</value>
+  <data name="rfvDisplayResource1.ErrorMessage" xml:space="preserve">
+    <value>Grupo Requerido</value>
   </data>
-  <data name="ContactAdmin" xml:space="preserve">
-    <value>Si prega di contattare l'amministratore se ritieni che questo sia un errore</value>
+  <data name="rfvEditDisplayResource1.ErrorMessage" xml:space="preserve">
+    <value>Grupo de AD Requerido</value>
   </data>
-  <data name="DontHaveAccess" xml:space="preserve">
-    <value>Non hai il livello richiesto l'accesso a presentare un nuovo ticket</value>
+  <data name="TemplateFieldResource2.HeaderText" xml:space="preserve">
+    <value>Grupo de AD &lt;a href='javascript:void();' class='tooltip limited'&gt;&lt;img src='../images/info.png' alt='explanation' /&gt;&lt;span class='border_color'&gt;&lt;q class='inner_color base_text'&gt;El Grupo de AD que será asociado a un nivel de acceso en este sistema.&lt;/q&gt;&lt;/span&gt;&lt;/a&gt;</value>
+    <comment>be careful to not edit the markup in this</comment>
   </data>
-  <data name="HasBeenNotified" xml:space="preserve">
-    <value>la tua richiesta è stata notificata. </value>
-    <comment>è necessario selezione il Sub-Gruppo</comment>
+  <data name="TemplateFieldResource3.HeaderText" xml:space="preserve">
+    <value>Nivel de acceso &lt;a href='javascript:void();' class='tooltip limited'&gt;&lt;img src='../images/info.png' alt='explanation' /&gt;&lt;span class='border_color'&gt;&lt;q class='inner_color base_text'&gt;El nivel de acceso que tendrán los usuarios en este grupo de AD.&lt;/q&gt;&lt;/span&gt;&lt;/a&gt;</value>
+    <comment>be careful to not edit the markup in this</comment>
   </data>
-  <data name="litTicketSubmittedTitleResource1.Text" xml:space="preserve">
-    <value>Ticket innoltrato</value>
+  <data name="ADRefreshError" xml:space="preserve">
+    <value>Error actualizando el archivo XML de los Grupos de AD; esto a menudo debe hacerse desde el servidor web mismo y por un administrador de dominio.</value>
   </data>
-  <data name="OriginallyAssignedTo" xml:space="preserve">
-    <value>Originario Assegnato a</value>
+  <data name="btnResetADxmlResource1.OnClientClick" xml:space="preserve">
+    <value>return confirm('Dependiendo de su configuración de red, a menudo es requerido que sea ejecutado desde el servidor web mismo y con una cuenta elevada si tiene que acceder al AD; Procede?')</value>
   </data>
-  <data name="TicketWasSubmittedBy" xml:space="preserve">
-    <value>priority ticket was submitted by</value>
+  <data name="LinkButton2Resource1.OnClientClick" xml:space="preserve">
+    <value>return confirm('Está seguro que desea remover este Grupo?');</value>
+  </data>
+  <data name="litADAssociatedResource1.Text" xml:space="preserve">
+    <value>El Grupo de AD que será asociado con un nivel de acceso en este sistema.</value>
   </data>
 </root>
